--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learning_app",
+  "name": "udacity-reactnd-would-you-rather",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,7 +9,14 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "react-redux": "^6.0.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^5.1.2",
+    "react-time-ago": "^5.0.7",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "tabler-react": "^1.30.1"
   },
   "scripts": {
     "start": "react-scripts start",
