--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^5.1.2",
-    "react-time-ago": "^5.0.7",
+    "react-scripts": "^3.4.4",
+    "react-time-ago": "^7.1.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "tabler-react": "^1.30.1"
+    "tabler-react": "^1.30.1",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
